Add new auth method

--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -48,7 +48,7 @@
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary mb-5">Submit</button>
-        <p class="text-center">Already have an account? <a href="login" class="text-white">Click here</a> to log
+        <p class="text-center">Already have an account? <a href="/login" class="text-white">Click here</a> to log
           in.</p>
       </form>
     </main>
