--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -9,14 +9,16 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Black Beans</title>
-  <script type="module" crossorigin src="/assets/index.36f1e76e.js"></script>
+  <script type="module" crossorigin src="/assets/index.9e864f01.js"></script>
+  <link rel="stylesheet" href="/assets/index.789a0c60.css">
 </head>
 
 <body>
   <div id="app"></div>
-
+  
 </body>
 
 </html>
